--- a/Harassment.html
+++ b/Harassment.html
@@ -374,7 +374,7 @@ Are their claims irrational or erratic? Do they have a history of violent behavi
   	 			<h4>follow us</h4>
   	 			<div class="social-links">
   	 				<a href="https://www.facebook.com/groups/1398991893988336"><i class="fab fa-facebook-f"></i></a>
-  	 				<a href="#"><i class="fab fa-twitter"></i></a>
+  	 				<a href="https://twitter.com/digitalrefresh1"><i class="fab fa-twitter"></i></a>
   	 				<a href="https://www.instagram.com/digitalrrfresh/"><i class="fab fa-instagram"></i></a>
   	 			</div>
   	 		</div>
