--- a/Social.html
+++ b/Social.html
@@ -355,7 +355,7 @@ Think critically about what you see online — a lot of posts are not 100% real.
   	 			<h4>follow us</h4>
   	 			<div class="social-links">
   	 				<a href="https://www.facebook.com/groups/1398991893988336"><i class="fab fa-facebook-f"></i></a>
-  	 				<a href="#"><i class="fab fa-twitter"></i></a>
+  	 				<a href="https://twitter.com/digitalrefresh1"><i class="fab fa-twitter"></i></a>
   	 				<a href="https://www.instagram.com/digitalrrfresh/"><i class="fab fa-instagram"></i></a>
   	 			</div>
   	 		</div>
