--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ more balanced digital environment for everyone.</p>
           <h4>Contact Us</h4>
           <ul>
             <li><a href="#">9876543212</a></li>
-            <li><a href="#">support@mentalgmail.com</a></li>
+            <li><a href="#">digitalrefresh@gmail.com</a></li>
           </ul>
         </div>
        
