--- a/Social.html
+++ b/Social.html
@@ -364,7 +364,7 @@ Think critically about what you see online — a lot of posts are not 100% real.
           <h4>Contact Us</h4>
           <ul>
             <li><a href="#">9876543212</a></li>
-            <li><a href="#">support@mentalgmail.com</a></li>
+            <li><a href="#">digitalrefresh@gmail.com</a></li>
           </ul>
         </div>
        
