--- a/FAQ.html
+++ b/FAQ.html
@@ -356,7 +356,7 @@ li {
           <h4>Contact Us</h4>
           <ul>
             <li><a href="#">9876543212</a></li>
-            <li><a href="#">support@mentalgmail.com</a></li>
+            <li><a href="#">digitalrefresh@gmail.com</a></li>
           </ul>
         </div>
        
