--- a/Harassment.html
+++ b/Harassment.html
@@ -281,8 +281,8 @@ Harassment is generally defined as a repeated pattern of behavior intended to sc
 
 <br><br>
 <img class = "cent" src="https://resize.indiatvnews.com/en/resize/newbucket/1200_-/2017/10/onlineharassment-1507116585.jpg" height = "350" width = "490">
-
-<h3><u>T - </u></h3>
+<br>
+<h3><u>Harassment - </u></h3>
 
 
 <p  style = "font-size:22px">
@@ -301,7 +301,7 @@ Doxxing (or Doxing) is the act of revealing someone’s personal information onl
 
 
 <img class = "cent" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQifx2J-Hy1jj9HHPxZW5nO-gDIlmExQUYdyA&usqp=CAU" height = "350" width = "590">
-<p >
+<p style = "font-size:22px">
  It is most common in the gaming and hacker communities but also affects celebrities, politicians, and journalists. Doxxing can range from a misdemeanor to a felony offense depending on the malicious intent and harm caused to the victim.
 Swatting is an extension of doxxing where a bad actor fabricates a dangerous story to law enforcement about the victim (i.e. “This person is holding someone hostage at their house). Law enforcement, in turn, shows up in force at the victim’s residence. It is a crime that can result in severe legal consequences for the perpetrator.
 Revenge Porn is the non-consensual sharing of sexually explicit images or videos of someone, usually by a former partner or spouse. It is a crime that is punishable under state laws and can lead to severe legal consequences for the perpetrator.
@@ -309,13 +309,14 @@ Sextortion is when an individual uses sexually explicit images or videos to exto
 
  </p>
 </p>
-
+<br><br>
 
 <img class = "cent" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTcEolujP0GPt9_Zg4N8DJ1rr98VwqhECxUQ&usqp=CAU" height = "350" width = "490">
+
+<br><br>
 <h3><u>What Can You Do If I Am Being Harassed Online? </u></h3>
 <p style = "font-size:22px">
-
-dentify, document, and report incidents of harassment. First things first: what specific actions are you considering to be harassment? Is it repeated and severe? This step is important when it comes to reporting online harassment; companies or courts will need to know exactly what behavior has occurred and its effect on you. Next, start keeping track of every instance of abuse.
+Identify, document, and report incidents of harassment. First things first: what specific actions are you considering to be harassment? Is it repeated and severe? This step is important when it comes to reporting online harassment; companies or courts will need to know exactly what behavior has occurred and its effect on you. Next, start keeping track of every instance of abuse.
  </p>
 <p  style = "font-size:22px">
 
@@ -383,7 +384,7 @@ Are their claims irrational or erratic? Do they have a history of violent behavi
           <h4>Contact Us</h4>
           <ul>
             <li><a href="#">9876543212</a></li>
-            <li><a href="#">digitalrefresh@gmail.com</a></li>
+            <li><a href="#">support@mentalgmail.com</a></li>
           </ul>
         </div>
        
