--- a/Harassment.html
+++ b/Harassment.html
@@ -249,8 +249,8 @@ li {
       </nav>
 
       <br><br>
-	<h1 style = " text-align:center;"><u>Online Harassment</u></h1>
-
+	<h1 style = "color : purple; text-align:center;"><u>Online Harassment</u></h1>
+<br>
 <table align = "center" style = "background-color: #33475b">
 	<tr>
 	<td> <img src="https://resize.indiatvnews.com/en/resize/newbucket/1200_-/2017/10/onlineharassment-1507116585.jpg" height = "350" width = "490"></td>
@@ -282,7 +282,7 @@ Harassment is generally defined as a repeated pattern of behavior intended to sc
 <br><br>
 <img class = "cent" src="https://resize.indiatvnews.com/en/resize/newbucket/1200_-/2017/10/onlineharassment-1507116585.jpg" height = "350" width = "490">
 <br>
-<h3><u>Harassment - </u></h3>
+<h3 style = "color : purple"><u>Harassment - </u></h3>
 
 
 <p  style = "font-size:22px">
@@ -314,7 +314,7 @@ Sextortion is when an individual uses sexually explicit images or videos to exto
 <img class = "cent" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTcEolujP0GPt9_Zg4N8DJ1rr98VwqhECxUQ&usqp=CAU" height = "350" width = "490">
 
 <br><br>
-<h3><u>What Can You Do If I Am Being Harassed Online? </u></h3>
+<h3 style = "color : purple"><u>What Can You Do If I Am Being Harassed Online? </u></h3>
 <p style = "font-size:22px">
 Identify, document, and report incidents of harassment. First things first: what specific actions are you considering to be harassment? Is it repeated and severe? This step is important when it comes to reporting online harassment; companies or courts will need to know exactly what behavior has occurred and its effect on you. Next, start keeping track of every instance of abuse.
  </p>
