--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ li {
 	</font></td>
 	<td><font align = "center" size = "3" face = "sans-serif">
 
-		<h1><a href = "Information Overload.html" style = "color : purple;">Information Overload</a><h1>
+		<h1><a href = "information overload.html" style = "color : purple;">Information Overload</a><h1>
 	</font></td>
 	<td><font align = "center" size = "3" face = "sans-serif">
 
